refactor: Adicionado configurações de documentação
