# src/main/java/application/impacto_manager_web/controller/AlunoController.java
@@ -2,10 +2,8 @@ package application.impacto_manager_web.controller;
 
 import application.impacto_manager_web.model.Aluno;
 import application.impacto_manager_web.service.AlunoService;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.Tag;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -13,7 +11,7 @@ import java.util.List;
 
 @RestController
 @RequestMapping("/api/aluno")
-@Api(tags = "Alunos")
+@Tag(name = "Alunos")
 public class AlunoController {
     private final AlunoService service;
 
@@ -22,33 +20,33 @@ public class AlunoController {
     }
 
     @GetMapping({"", "/"})
-    @ApiOperation(value = "Buscar alunos")
+    @Operation(summary = "Buscar alunos")
     public List<Aluno> findAll() {
         return service.findAll();
     }
 
     @GetMapping("/{id}")
-    @ApiOperation(value = "Buscar alunos por id")
+    @Operation(summary = "Buscar alunos por id")
     public Aluno findById(@PathVariable Long id) {
         return service.findById(id);
     }
 
     @PostMapping
-    @ApiOperation(value = "Novo Aluno")
+    @Operation(summary = "Novo Aluno")
     public ResponseEntity<Aluno> create(@RequestBody Aluno aluno) {
         Aluno novoAluno = service.save(aluno);
         return ResponseEntity.ok(novoAluno);
     }
 
     @PutMapping("/{id}")
-    @ApiOperation(value = "Editar dados")
+    @Operation(summary = "Editar dados")
     public Aluno update(@RequestBody Aluno aluno) {
         Long id = aluno.getId();
         return service.update(id, aluno);
     }
 
     @DeleteMapping("/{id}")
-    @ApiOperation(value = "Exclui aluno")
+    @Operation(summary = "Exclui aluno")
     public ResponseEntity<Void> delete(@PathVariable Long id) {
         service.delete(id);
         return ResponseEntity.ok().build();
